--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<div class="logo">&copy; TAFSEER-E-QURAN</div>
 
-		<div><a href="file:///D:/_My%20Websites/tafseer-e-quran/index.html"><i class="fa-solid fa-house icon"></i></a></div>
+		<div><a href="https://tafseer-e-quran.github.io/homepage/"><i class="fa-solid fa-house icon"></i></a></div>
 		<br><br>
 		<h1>WORDS WITH DIFFERENT SHAPES</h1>
 
