--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<div class="logo">&copy; TAFSEER-E-QURAN</div>
 
-		<div><a href="https://tafseer-e-quran.github.io/homepage/"><i class="fa-solid fa-house icon"></i></a></div>
+		<div><a href="file:///D:/_My%20Websites/tafseer-e-quran/index.html"><i class="fa-solid fa-house icon"></i></a></div>
 		<br><br>
 		<h1>WORDS WITH DIFFERENT SHAPES</h1>
 
@@ -86,51 +86,51 @@
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/تقابل.png" alt="تقابل" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">He competed</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/تقابل pv.png" alt="تقابل" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">He was competed</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/یتقابل.png" alt="یتقابل" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">He competes [Present] / He will compete [Future]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/یتقابل pv.png" alt="یتقابل" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">He is competed [Present] / He will be competed [Future]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/متقابل.png" alt="متقابل" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">One who competes [Male]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/متقابل pv.png" alt="متقابل" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">One who is competed [Male]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/متقابلون OR متقابلین.png" alt="متقابلون OR متقابلین" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">More than one (Male) who competes [Plural]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/متقابلون OR متقابلین pv.png" alt="متقابلون OR متقابلین" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">More than one (Male) who are competed [Plural]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/متقابلة.png" alt="متقابلة" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">One who competes [Female]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/متقابلة pv.png" alt="متقابلة" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">One who is competed [Female]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/متقابلات.png" alt="متقابلات" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">More than one (Female) who competes [Plural]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفاعل SHAPED WORDS/All in one/متقابلات pv.png" alt="متقابلات" class="words"></td>
-				<td class="definition">To compete</td>
+				<td class="definition">More than one (Female) who are competed [Plural]</td>
 			</tr>
 		</table><br><br>
 
@@ -147,7 +147,7 @@
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/تکلف.png" alt="تکلف" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">To Cost</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/تکلم.png" alt="تکلم" class="words"></td>
@@ -177,51 +177,51 @@
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/تکلف.png" alt="تکلف" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">He costed</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/تکلف pv.png" alt="تکلف" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">He was costed</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/یتکلف.png" alt="یتکلف" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">He costs [Present] / He will cost [Future]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/یتکلف pv.png" alt="یتکلف" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">He is costed [Present] / He will be costed [Future]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/متکلف.png" alt="متکلف" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">One who costs [Male]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/متکلف pv.png" alt="متکلف" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">One who is costed [Male]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/ین OR متکلفون.png" alt="ین OR متکلفون" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">Ones who costs [Male & Plural]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/ین OR متکلفون pv.png" alt="ین OR متکلفون" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">Ones who are costed [Male & Plural]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/متکلفة.png" alt="متکلفة" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">One who costs [Female]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/متکلفة pv.png" alt="متکلفة" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">One who is costed [Female]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/متکلفات.png" alt="متکلفات" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">Ones who costs [Female & Plural]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/تفعل SHAPED WORDS/All in one/متکلفات pv.png" alt="متکلفات" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">Ones who are costed [Female & Plural]</td>
 			</tr>
 		</table><br><br>
 
@@ -238,39 +238,39 @@
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مقابلہ.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">To Compete (same as تقابل)</td>
 			</tr>
 			<tr>
-				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/محاصرة.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/محاصرة.png" alt="محاصرة" class="words"></td>
+				<td class="definition">Besieged</td>
 			</tr>
 			<tr>
-				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مناظره.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مناظره.png" alt="مناظره" class="words"></td>
+				<td class="definition">To Debate</td>
 			</tr>
 			<tr>
-				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مجاھدہ.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مجاھدہ.png" alt="مجاھدہ" class="words"></td>
+				<td class="definition">Mujahid / One who fights in the way of Allah</td>
 			</tr>
 			<tr>
-				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مسابقہ.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مسابقہ.png" alt="مسابقہ" class="words"></td>
+				<td class="definition">Competition</td>
 			</tr>
 			<tr>
-				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مصافحہ.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مصافحہ.png" alt="مصافحہ" class="words"></td>
+				<td class="definition">To shake hands</td>
 			</tr>
 			<tr>
-				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مبادلہ.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مبادلہ.png" alt="مبادلہ" class="words"></td>
+				<td class="definition">Exchange</td>
 			</tr>
 			<tr>
-				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/معانقہ.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/معانقہ.png" alt="معانقہ" class="words"></td>
+				<td class="definition">Hugging</td>
 			</tr>
 			<tr>
-				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مبارک.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مبارک.png" alt="مبارک" class="words"></td>
+				<td class="definition">Blessed</td>
 			</tr>
 		</table><br><br>
 
@@ -284,55 +284,55 @@
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/Verbs/مقابلہ.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">To compete</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/قابل.png" alt="قابل" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">He competed</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/قوبل.png" alt="قوبل" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">He was competed</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/یقابل.png" alt="یقابل" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">He competes [Present] / He will compete [Future]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/یقابل PV.png" alt="یقابل" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">He is competed [Present] / He will be competed [Future]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/مقابل.png" alt="مقابل" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">One who competes [Male]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/مقابل PV.png" alt="مقابل" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">One who is competed [Male]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/ین OR مقابلون.png" alt="ین OR مقابلون" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">More than one (Male) who competes [Plural]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/ین OR مقابلون pv.png" alt="ین OR مقابلون" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">More than one (Male) who are competed [Plural]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/مقابلة.png" alt="مقابلة" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">One who competes [Female]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/مقابلة PV.png" alt="مقابلة" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">One who is competed [Female]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/مقابلات.png" alt="مقابلات" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">More than one (Female) who competes [Plural]</td>
 			</tr>
 			<tr>
 				<td><img src="Images/مفاعلة SHAPED WORDS/مقابلات pv.png" alt="مقابلات" class="words"></td>
-				<td class="definition">To be in tension</td>
+				<td class="definition">More than one (Female) who are competed [Plural]</td>
 			</tr>
 		</table><br><br>
 		
@@ -349,23 +349,23 @@
 			</tr>
 			<tr>
 				<td><img src="Images/فعال SHAPED WORDS/مقاتلہ.png" alt="مقابلہ" class="words"></td>
-				<td><img src="Images/فعال SHAPED WORDS/قتال.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">sadasd asdads asdaewa dadawd</td>
+				<td><img src="Images/فعال SHAPED WORDS/قتال.png" alt="قتال" class="words"></td>
+				<td class="definition">To fight / To Compete</td>
 			</tr>
 			<tr>
-				<td><img src="Images/فعال SHAPED WORDS/مجادلہ.png" alt="مقابلہ" class="words"></td>
-				<td><img src="Images/فعال SHAPED WORDS/جدال.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">sadasd asdads asdaewa dadawd</td>
+				<td><img src="Images/فعال SHAPED WORDS/مجادلہ.png" alt="مجادلہ" class="words"></td>
+				<td><img src="Images/فعال SHAPED WORDS/جدال.png" alt="جدال" class="words"></td>
+				<td class="definition">Controversy / To Argue</td>
 			</tr>
 			<tr>
-				<td><img src="Images/فعال SHAPED WORDS/مجاھدہ.png" alt="مقابلہ" class="words"></td>
-				<td><img src="Images/فعال SHAPED WORDS/جھاد.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">sadasd asdads asdaewa dadawd</td>
+				<td><img src="Images/فعال SHAPED WORDS/مجاھدہ.png" alt="مجاھدہ" class="words"></td>
+				<td><img src="Images/فعال SHAPED WORDS/جھاد.png" alt="جھاد" class="words"></td>
+				<td class="definition">Jihad / To fight in the way of Allah</td>
 			</tr>
 			<tr>
-				<td><img src="Images/فعال SHAPED WORDS/معالجہ.png" alt="مقابلہ" class="words"></td>
-				<td><img src="Images/فعال SHAPED WORDS/علاج.png" alt="مقابلہ" class="words"></td>
-				<td class="definition">sadasd asdads asdaewa dadawd</td>
+				<td><img src="Images/فعال SHAPED WORDS/معالجہ.png" alt="معالجہ" class="words"></td>
+				<td><img src="Images/فعال SHAPED WORDS/علاج.png" alt="علاج" class="words"></td>
+				<td class="definition">Treatment</td>
 			</tr>
 		</table><br><br>
 
@@ -386,11 +386,11 @@
 			</tr>
 			<tr>
 				<td><img src="Images/استفعال SHAPED WORDS/verbs/استحقاق.png" alt="استحقاق" class="words"></td>
-				<td class="definition">To put into practice</td>
+				<td class="definition">Merit</td>
 			</tr>
 			<tr>
 				<td><img src="Images/استفعال SHAPED WORDS/verbs/استغبار.png" alt="استغبار" class="words"></td>
-				<td class="definition">To put into practice</td>
+				<td class="definition">To be shocked</td>
 			</tr>
 			<tr>
 				<td><img src="Images/استفعال SHAPED WORDS/verbs/استغفار.png" alt="استغفار" class="words"></td>
